# MLOps-Demo

./: .gitignore  Dockerfile  app.py  application.py  main.py  pyproject.toml  requirements.txt  setup.py
.ebextensions/: python.config
.github/workflows/: actions.yaml
artifacts/: model.pkl  model_report.txt  preprocessor.pkl
catboost_info/: catboost_training.json  time_left.tsv
catboost_info/learn/: events.out.tfevents
notebooks/: eda.ipynb  model_training.ipynb
source/: exception.py  utils.py
source/components/: data_ingestion.py  data_transformation.py  model_trainer.py
source/pipeline/: prediction_pipeline.py  training_pipeline.py
src/exception/: exception.py
templates/: home.html  index.html
tests/: test_app.py
