[project]
name = "mlops-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.3.0",
    "scikit-learn>=1.7.0",
    "setuptools>=80.9.0",
]

[dependency-groups]
dev = [
    "mlops-project",
    "numpy>=2.3.1",
    "pandas>=2.3.0",
    "scikit-learn>=1.7.0",
]

[tool.uv.sources]
mlops-project = { workspace = true }
