[project]
name = "mlops-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "catboost>=1.2.8",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "pandas>=2.3.0",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "setuptools>=80.9.0",
    "xgboost>=3.0.2",
]

[dependency-groups]
dev = [
    "mlops-project",
    "numpy>=2.3.1",
    "pandas>=2.3.0",
    "scikit-learn>=1.7.0",
]

[tool.uv.sources]
mlops-project = { workspace = true }
